--- a/ElementFactory/Views/Home/Index.cshtml
+++ b/ElementFactory/Views/Home/Index.cshtml
@@ -14,9 +14,9 @@
                     {
                         @if (period == 1 && group == 13)
                         {
-                            <td>
+                            <td id="listItems">
                                 <div class="listItems">
-                                    <select>
+                                    <select class="seeItemsList">
                                         <option class="seeAtomicNumber">Изглед по атомна маса</option>
                                         <option class="seePhysicalAppearance">Изглед по физично състояние</option>
                                         <option class="seeAtomicRadius">Изглед по атомен радиус</option>
