--- a/ElementFactory/wwwroot/css/site.css
+++ b/ElementFactory/wwwroot/css/site.css
@@ -1,5 +1,5 @@
 :root{
-    --borderPixels: 4px;
+    --borderPixels: 3px;
     --borderType: solid;
 }
 
@@ -10,6 +10,13 @@ body
     height: 100vh;
     background-color: #090947;
     background-image: linear-gradient(315deg, #090947 0%, #5a585a 74%);
+}
+
+form {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
 }
 
 form,
@@ -38,6 +45,7 @@ td
 {
     margin: 2px;
     margin-top: 0;
+    font-weight: 490;
 }
 
 #listItems {
@@ -73,7 +81,7 @@ td p
 {
     padding-top: 0;
     text-align: center;
-    font-size: 0.40em;
+    font-size: 0.42em;
     width: 100%;
 }
 
@@ -127,18 +135,63 @@ td p
     border: var(--borderPixels) var(--borderType) #ef59a1;
 }
 
-.Liquid{
-
+.Liquid {
+    background-color: rgb(56, 0, 0);
+    color: white;
+    border: 3px solid rgb(35, 0, 0);
 }
 
-.Solid{
-
+.Solid {
+    background-color: rgb(71, 71, 72);
+    color: white;
+    border: 3px solid rgb(81, 81, 82);
 }
 
-.Gas{
-
+.Gas {
+    background-color: rgb(0, 34, 64);
+    color: white;
+    border: 3px solid rgb(0, 10, 64);
 }
 
 .NA {
+    background-color: rgb(22, 22, 22);
+    color: white;
+    border: 3px solid rgb(32, 32, 32);
+}
 
+.yearInput {
+    display: none;
+    margin-top: 4px;
+}
+
+.yearInput,
+#seeItemsList {
+    border: 1px solid #ccc;
+    font-size: 16px;
+    border-radius: 5px;
+    outline: none;
+    color: #333;
+    background-color: #D3D3D3;
+}
+
+.hasBoilingPoint {
+    color: white;
+}
+
+.hasMeltingPoint {
+    color: #E0E0CE;
+}
+
+.hasAtomicRadius{
+    color: #D4FFEC;
+}
+
+.errorDiv {
+    background-color: #ff3333;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    font-size: 20px;
+    display: none;
+    margin: 12px 0;
 }
