--- a/ElementFactory/Views/Home/Index.cshtml
+++ b/ElementFactory/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using System.Text.Json;
+@using System.Text.Json.Serialization;
 @{
     ViewData["Title"] = "Home Page";
 }
@@ -117,8 +118,7 @@
 @{
     var modelJson = JsonSerializer.Serialize(Model, new JsonSerializerOptions()
     {
-         ReferenceHandler = System.Text.Json.Serialization.ReferenceHandler.IgnoreCycles
+         ReferenceHandler = ReferenceHandler.IgnoreCycles
     });
-
 }
 <script src="/js/listItems.js" asp-append-version="true" onload="PageSettings(@modelJson)"></script>
