--- a/ElementFactory/wwwroot/css/site.css
+++ b/ElementFactory/wwwroot/css/site.css
@@ -5,11 +5,10 @@
 
 body 
 {
-    margin-bottom: 60px;
-    width: 100vw;
     height: 100vh;
     background-color: #090947;
     background-image: linear-gradient(315deg, #090947 0%, #5a585a 74%);
+    overflow: hidden;
 }
 
 form {
@@ -24,38 +23,38 @@ table,
 tbody 
 {
     margin: 0;
-    padding: 0;
-    width: 100%;    
-    height: 100%;
-    margin-left: 20px;
+    padding: 0;   
 }
 
 tbody {
     display: grid;
-    grid-template-rows: repeat(9, 4.0em);
+    grid-template-rows: repeat(9, 1fr);
+    flex: 1;
 }
 
-tr 
+form tr 
 {
     display: grid;
-    grid-template-columns: repeat(18, 4%);
+    grid-template-columns: repeat(18, 1fr);
 }
 
-td
+form td
 {
     margin: 2px;
     margin-top: 0;
     font-weight: 400;
+    cursor: pointer;
 }
 
 #listItems {
-    grid-column: span 5;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0;
+    grid-column: span 5;
 }
 
-td p 
+form td p 
 {
     word-wrap: break-word;
     margin: 0;
@@ -162,7 +161,10 @@ td p
 .yearInput,
 .elementInput {
     display: none;
-    margin-top: 4px;
+    margin-top: 2px;
+    padding: 0;
+    width: 40%;
+    grid-column: span 2;
 }
 
 .yearInput,
@@ -174,6 +176,16 @@ td p
     outline: none;
     color: #333;
     background-color: #D3D3D3;
+}
+
+.listItems {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    place-items: center;
+}
+
+#seeItemsList{
+    grid-column: 2 span;
 }
 
 .hasBoilingPoint {
@@ -228,4 +240,76 @@ td p
 
 .darkModeHeader{
     color: aliceblue;
+}
+
+#xMark{
+    font-size: 36px;
+    cursor: pointer;
+    color: red;
+    font-weight: 400;
+    border: 3px solid red;
+    padding: 6px;
+}
+
+#popUpContainerOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+#popUpContainer {
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    text-align: center;
+    transform: scale(0.65);
+    transition: transform 0.9s ease-out;
+    font-size: 24px;
+}
+
+#popUpHeader {
+    font-size: 30px;
+    text-align: center;
+    padding-bottom: 12px;
+}
+
+#popUpArticle2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+#popUpArticle2 section {
+    padding: 12px;
+    text-align: center;
+}
+
+#popUpTable{
+    width: 100%;
+}
+
+#popUpSection1 {
+    font-size: 46px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#popUpMain {
+    text-align: right;
+}
+
+#popUpTable p{
+    font-weight: 400;
+    text-align: left;
+    padding:0;
+}
+
+#popUpTable th{
+    display: inline-block;
 }
