--- a/ElementFactory/Views/Home/Index.cshtml
+++ b/ElementFactory/Views/Home/Index.cshtml
@@ -115,6 +115,13 @@
     </table>
 </form>
 
+
+<div id="popUpContainerOverlay">
+    <div id="popUpContainer">
+
+    </div>
+</div>
+
 @{
     var modelJson = JsonSerializer.Serialize(Model, new JsonSerializerOptions()
     {
@@ -122,3 +129,4 @@
     });
 }
 <script src="/js/listItems.js" asp-append-version="true" onload="PageSettings(@modelJson)"></script>
+<script src="/js/createDOM.js"></script>
