--- a/ElementFactory/wwwroot/css/site.css
+++ b/ElementFactory/wwwroot/css/site.css
@@ -43,7 +43,6 @@ form td
     margin: 2px;
     margin-top: 0;
     font-weight: 400;
-    cursor: pointer;
 }
 
 #listItems {
@@ -238,8 +237,8 @@ form td p
     color: #61677A;
 }
 
-.darkModeHeader{
-    color: aliceblue;
+.darkModeHeader {
+    background-color: aliceblue;
 }
 
 #xMark{
@@ -260,6 +259,7 @@ form td p
     background: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
+    transition: transform 0.9s ease-out;
 }
 
 #popUpContainer {
@@ -268,9 +268,9 @@ form td p
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     text-align: center;
-    transform: scale(0.65);
-    transition: transform 0.9s ease-out;
     font-size: 24px;
+    transform: scale(0.65);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 #popUpHeader {
@@ -307,9 +307,13 @@ form td p
 #popUpTable p{
     font-weight: 400;
     text-align: left;
-    padding:0;
+    padding: 0;
 }
 
 #popUpTable th{
     display: inline-block;
+}
+
+.bg-black{
+    color: white;
 }
